Add shim for karma devkit plugin compatibility

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "file:./angular-devkit-build-angular-shim",
     "@angular/build": "^20.3.10",
     "@angular/cli": "^20.3.10",
     "@angular/compiler-cli": "^20.3.0",
